// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib/ActiontechTable-FilterButton render click filter btn 1`] = `
<body>
  <div>
    <button
      class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default ant-btn-sm actiontech-filter-button-namespace basic-button-wrapper css-geipcv"
      style="padding: 0px 6px 0px 10px;"
      type="button"
    >
      <div
        class="ant-space css-dev-only-do-not-override-674gwq ant-space-horizontal ant-space-align-center"
      >
        <div
          class="ant-space-item"
          style="margin-right: 2px;"
        >
          收起筛选
        </div>
        <div
          class="ant-space-item"
        >
          <span
            class="custom-icon custom-icon-arrow-up css-u3jcp4"
            role="img"
          >
            <svg
              fill="currentColor"
              height="14"
              viewBox="0 0 14 14"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6.99993 6.31629L4.11243 9.20379L3.2876 8.37896L6.99993 4.66663L10.7123 8.37896L9.88743 9.20379L6.99993 6.31629Z"
              />
            </svg>
          </span>
        </div>
      </div>
    </button>
  </div>
</body>
`;

exports[`lib/ActiontechTable-FilterButton render click filter btn 2`] = `
<body>
  <div>
    <button
      class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default ant-btn-sm actiontech-filter-button-namespace basic-button-wrapper css-geipcv"
      style="padding: 0px 6px 0px 10px;"
      type="button"
    >
      <div
        class="ant-space css-dev-only-do-not-override-674gwq ant-space-horizontal ant-space-align-center"
      >
        <div
          class="ant-space-item"
          style="margin-right: 2px;"
        >
          收起筛选
        </div>
        <div
          class="ant-space-item"
        >
          <span
            class="custom-icon custom-icon-arrow-up css-u3jcp4"
            role="img"
          >
            <svg
              fill="currentColor"
              height="14"
              viewBox="0 0 14 14"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6.99993 6.31629L4.11243 9.20379L3.2876 8.37896L6.99993 4.66663L10.7123 8.37896L9.88743 9.20379L6.99993 6.31629Z"
              />
            </svg>
          </span>
        </div>
      </div>
    </button>
  </div>
</body>
`;

exports[`lib/ActiontechTable-FilterButton render disabled filter button 1`] = `
<body>
  <div>
    <button
      class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default ant-btn-sm ant-btn-two-chinese-chars actiontech-filter-button-namespace basic-button-wrapper css-geipcv"
      disabled=""
      style="padding: 0px 6px 0px 10px;"
      type="button"
    >
      <div
        class="ant-space css-dev-only-do-not-override-674gwq ant-space-horizontal ant-space-align-center"
      >
        <div
          class="ant-space-item"
          style="margin-right: 2px;"
        >
          筛选
        </div>
        <div
          class="ant-space-item"
        >
          <span
            class="custom-icon custom-icon-arrow-down css-u3jcp4"
            role="img"
          >
            <svg
              fill="currentColor"
              height="14"
              viewBox="0 0 14 14"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6.99999 7.68364L9.88749 4.79614L10.7123 5.62098L6.99999 9.33331L3.28766 5.62098L4.11249 4.79614L6.99999 7.68364Z"
              />
            </svg>
          </span>
        </div>
      </div>
    </button>
  </div>
</body>
`;

exports[`lib/ActiontechTable-FilterButton render hasSelectedFilter 1`] = `
<body>
  <div>
    <button
      class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default ant-btn-sm ant-btn-two-chinese-chars actiontech-filter-button-namespace basic-button-wrapper css-geipcv"
      style="padding: 0px 6px 0px 10px;"
      type="button"
    >
      <div
        class="ant-space css-dev-only-do-not-override-674gwq ant-space-horizontal ant-space-align-center"
      >
        <div
          class="ant-space-item"
          style="margin-right: 2px;"
        >
          筛选
        </div>
        <div
          class="ant-space-item"
        >
          <span
            class="custom-icon custom-icon-arrow-down css-u3jcp4"
            role="img"
          >
            <svg
              fill="currentColor"
              height="14"
              viewBox="0 0 14 14"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6.99999 7.68364L9.88749 4.79614L10.7123 5.62098L6.99999 9.33331L3.28766 5.62098L4.11249 4.79614L6.99999 7.68364Z"
              />
            </svg>
          </span>
        </div>
      </div>
    </button>
  </div>
</body>
`;
